	- get version from VERSION
	- don't treat warnings as errors
	- output package version
	- check for rpmbuild, pod2markdown, scandeps-static.pl
	- update dependencies
	* src/main/perl/lib/Amazon/S3.pm.in
	- new logging option
	- mv'd from dist/lib/Amazon/S3.pm
	- documenation updates
	- refactoring, perlcritic cleanups
	- use Amazon::S3::Constants
	- allow passing credentials class
	(get_logger): new
	(level): new
	(get_credentials): new
	(new)
	- secure defaults to true
	(region): new
	(list_bucket_v2): new
	(list_bucket_all_v2): new
	(last_response): new
	* src/main/perl/lib/Amazon/S3/Bucket.pm.in
	- mv'd from dist/lib/Amazon/S3/Bucket.pm
	- revert using XML::Simple
	- use Amazon::S3::Constants
	- perlcritic cleanup
	- perltidy
	(list_v2): new
	(list_all_v2): new
	* src/main/perl/lib/Makefile.am: new
	* src/main/perl/Makefile.am: new
	* src/main/Makefile.am: new
	* src/Makefile.am: new
	* cpan/Makfile.am: new
	* cpan/requires: new
	* cpan/test-requires: new
	* src/main/perl/t/01-api.t
	- mv'd from dist/t/01api.t
	- refactored test
	- support AWS mocking services
	- enable/disable regional testing
	- added list_vs test
	- create tempfile instead of using t/README
	* src/main/perl/t/02-logging.t: new
	* src/main/perl/t/03-region.t: new
	* src/main/perl/t/04-list-bucket.t: new
	* .gitignore: *.pm
	* ChangeLog: mv'd from dist/CHANGES
	* README-TESTING.md: new
	* README-BUILD.md: new
	* VERSION: new
	* bootstrap: new
	* autotools/ads_PERL_INCLUDES.m4: new
	* autotools/ads_PERL_LIBDIR.m4: new
	* autotools/ads_PERL_MODULE.m4: new
	* autotools/ads_PROG_PERL.m4: new
	* autotools/am_rpm_build_mode.m4: new
	* autotools/ax_am_conditional_example.m4: new
	* autotools/ax_deps_check.m4: new
	* autotools/ax_distcheck_hack.m4: new
	* autotools/ax_rpmbuild_check.m4: new

Revision history for Perl module Amazon::S3:
0.48    Sep 17 2021
    - remove leading '/' from bucket name
    - modify tests for not s3.amazonaws.com hosts (e.g. minio)
0.47    Feb 4 2019